--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-management-frontend",
+  "name": "projex-frontend",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
